gitops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 'jboss-hello'
spec:
  selector:
    matchLabels:
      app: jboss-hello
  replicas: 1
  template:
    metadata:
      labels:
        app: jboss-hello
    spec:
      containers:
        - name: 'container'
          image: >-
            image-registry.openshift-image-registry.svc:5000/rosa-jboss/rosa-jboss-demo:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always  
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
