gitops/service.eap.yaml
apiVersion: v1
kind: Service
metadata:
  name: jboss-hello
spec:
  selector:
    app: jboss-hello
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
