gitops/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jboss-hello
  labels: {}
spec:
  to:
    kind: Service
    name: jboss-hello
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ''
  port:
    targetPort: 8080
  alternateBackends: []
